@startuml

package tkinter {
    class LabelFrame
    class Scrollbar
    class Widget
    class Frame
}

package libs {
    package utils {
        class AutoScrollbar
        class ToolTips
        class ChangeEvent
        class PropertyChangeEvent
        class ImageViewer
    }
}

package plugins {
    package Cypherer {
        package view(Cypherer) {
            class Cypherer
        }
    }
    package Generator {
        package view(Generator) {
            class GeneratorView
        }
    }
    package ImageFormatter {
        package view(ImageFormatter) {
            class ImageFormatter
        }
    }
}

'Relations d'héritage
AutoScrollbar --|> Scrollbar
ImageViewer --|> LabelFrame
ToolTips --|> Widget
PropertyChangeEvent --|> ChangeEvent
Cypherer --|> Frame
ImageFormatter --|> Frame
GeneratorView --|> Frame

hide empty members
title Ensemble des relations d'héritage
@enduml